--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,11 +6,61 @@
 
 body {
     height: 100%;
+}
+
+.main_body {
     background-image: url('/img/2.webp');
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
 }
+
+.dashboard_body {
+    background-image: url('/img/5.webp');
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
+#sidebar {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    opacity: 50%;
+    left: 0;
+    background-color: #111;
+    padding-top: 20px;
+}
+
+#sidebar:hover {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    opacity: 100%;
+    left: 0;
+    background-color: #111;
+    padding-top: 20px;
+}
+
+
+#sidebar a {
+    padding: 15px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+#sidebar a:hover {
+    color: #f1f1f1;
+}
+
+#content {
+    margin-left: 250px;
+    padding: 16px;
+}
+
 
 /* Navbar */
 #navbar img {
@@ -52,7 +102,7 @@ footer p {
     position: absolute;
     width: 30%;
     height: 50%;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -40%);
     text-align: center;
